# cs685-standardized-project

./: .gitignore  README.md  report_test.py  run.py
barn_challenge_nav/: CMakeLists.txt  package.xml  setup.py
barn_challenge_nav/launch/: gazebo_launch.launch  move_base_DWA.launch  move_base_eband.launch
barn_challenge_nav/scripts/: obstacle_avoidance_node
barn_challenge_nav/src/: enhanced_trajectory_generator.cpp
jackal_helper/: CMakeLists.txt
scripts/: ros_install.sh  singularity_install.sh
scripts/ansible/: playbook.yml
scripts/ansible/roles/ros_install/files/: jackal_setup.sh
scripts/ansible/roles/ros_install/tasks/: main.yml
