<?xml version="1.0"?>
<package format="2">
  <name>barn_challenge_nav</name>
  <version>0.0.0</version>
  <description>The barn_challenge_nav package</description>
  <maintainer email="zifanxu@todo.todo">zifanxu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>